Thu Oct 30 10:30:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * NEWS
          Updated.

Thu Oct 30 06:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/ValueTypes/Bank/bank.mpc
        * DevGuideExamples/ValueTypes/Messenger/ValueTypes.mpc
          Made IDL projects unique

Wed Oct 29 19:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH_AMI/AMH_AMI.mpc
        * DevGuideExamples/BiDirectionalGIOP/BiDirectionalGIOP.mpc
        * DevGuideExamples/Multithreading/GracefulShutdown/GracefulShutdown.mpc
        * DevGuideExamples/Multithreading/Reactive/Reactive.mpc
        * DevGuideExamples/Multithreading/ThreadPerConnection/ThreadPerConnection.mpc
        * DevGuideExamples/Multithreading/ThreadPool/ThreadPool.mpc
        * DevGuideExamples/PortableInterceptors/Auth/Auth.mpc
        * DevGuideExamples/PortableInterceptors/Auth/MessengerClient.cpp
        * DevGuideExamples/PortableInterceptors/IOR/IOR.mpc
        * DevGuideExamples/PortableInterceptors/PICurrent/ClientInitializer.cpp
        * DevGuideExamples/PortableInterceptors/PICurrent/MessengerClient.cpp
        * DevGuideExamples/PortableInterceptors/PICurrent/MessengerServer.cpp
        * DevGuideExamples/PortableInterceptors/PICurrent/PICurrent.mpc
        * DevGuideExamples/PortableInterceptors/SimpleCodec/SimpleCode.mpc
        * DevGuideExamples/ValueTypes/Bank/bank.mpc
        * DevGuideExamples/ValueTypes/Messenger/ValueTypes.mpc
          Improved MPC files, removed not needed includes of CosNamingC.h

Wed Oct 29 15:27:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Internal.cpp:
          Updated debug statement to match the layout of the other messages

Wed Oct 29 13:25:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * NEWS
          Updated.

Wed Oct 29 07:21:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH/AMH.mpc