@@ -76,8 +76,8 @@ TAO_Perfect_Hash_OpTable::find (const char *opname,
       skelfunc = 0; // insure that somebody can't call a wrong function!
       ACE_ERROR_RETURN ((LM_ERROR,
                          ACE_TEXT ("TAO_Perfect_Hash_OpTable:find for ")
-                         ACE_TEXT ("operation '%s' (length=%d) failed\n"),
-                         ACE_TEXT_CHAR_TO_TCHAR (opname ? opname : "<null string>"), length),
+                         ACE_TEXT ("operation '%C' (length=%d) failed\n"),
+                         opname ? opname : "<null string>", length),
                         -1);
     }
 
