@@ -1,3 +1,10 @@
+Thu Oct 30 12:17:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/MCAST_Parser.cpp:
+        * tao/PortableServer/Operation_Table_Perfect_Hash.cpp:
+          Use %C to log ascii strings instead of using %s with
+          ACE_TEXT_CHAR_TO_TCHAR
+
 Thu Oct 30 10:30:00 UTC 2008  Simon Massey <sma at prismtech dot com>
 
         * NEWS
